--- a/css/main2.css
+++ b/css/main2.css
@@ -1,9 +1,11 @@
+
+/*# sourceMappingURL=main2.css.map */
 /*css*/
 body{margin: 0; padding: 0;}
  
-.active{color: red;}
+.active{color: blueviolet;}
 .fade-enter-active, .fade-leave-active {
-    transition-duration: 0.6s;
+    transition-duration: 0.5s;
     transition-property: opacity;
     transition-timing-function: ease;
 }
@@ -19,10 +21,12 @@ body{margin: 0; padding: 0;}
 
 /*footer-----------------*/
 #footerArea{margin-top: 100px;}
-#footerArea{color:white;height: 100px;background-color:#202945; }
+#footerArea{color:gray;height: 100px;background-color:skyblue;
+font-size: 18px; }
 #socialIcon li img {width: 40px;margin-right: 5px;}
 #socialIcon li{display: inline;}
-#socialIcon li img:hover{opacity: 0.4;}
+#socialIcon li img:hover{opacity: 0.3;}
+#socialIcon li p{font-size: 18px;}
 
 #footerInfo{padding-top: 20px;}
 .copy{padding-top: 10px;}
@@ -32,17 +36,13 @@ body{margin: 0; padding: 0;}
 #homeImg{position: relative; margin-bottom: 100px;}
 #homeP{position:absolute;top: 300px;left:150px;}
 
-#mapText{line-height: 40px; font-size: 20px;}
-.display-4 ,.lead{color: white;}
-/*#mapTextB{margin-top: 100px;}*/
-/*video-----------------*/
-#videotitle{color: #7d7d7d ;}
+
 
 
 /*blog-----------------*/
 .card{margin-bottom: 30px;}
-.sTitle{text-align:center;font-size:18px;color: #7d7d7d;}
 .bTitle{text-align: center;}
 #signupArea{margin-top: 100px;}
 
 
+/*# sourceMappingURL=main2.css.map */
