--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body * {
   list-style-type: none;
 }
 body #homeImg {
+  display: flex;
   width: 500px;
   background-color: #0e74c2;
 }
@@ -23,6 +24,7 @@ body #homeImg img {
 }
 body #homeP h2 {
   color: #f0fbfe;
+  font-size: 36px;
 }
 body #homeP p {
   font-size: 20px;
@@ -51,16 +53,18 @@ body #logopart {
   border-bottom: 3px solid skyblue;
 }
 body #logopart img {
-  width: 100px;
+  width: 60px;
   display: inline-block;
   margin: 0 auto;
-  margin-left: 0px;
+  margin-top: 20px;
+  margin-left: 75px;
 }
 body #logopart p {
   font-size: 20px;
-  color: burlywood;
+  color: #e0ac67;
   display: inline-block;
   margin-left: 30px;
+  margin-top: 0px;
 }
 body #routerNav {
   width: 450px;
@@ -122,6 +126,35 @@ body #videopart p {
   margin-top: 20px;
   text-align: left;
   margin-left: 10px;
+}
+body #ontraio {
+  display: inline;
+}
+body #ontraio h2 {
+  text-align: center;
+  font-size: 25px;
+  margin: 0 auto;
+  color: #323232;
+}
+body #ontraio h3 {
+  color: #1b84bd;
+  margin-top: 36px;
+  font-size: 22px;
+  text-align: center;
+}
+body #ontraio img {
+  width: 460px;
+  height: auto;
+  margin-top: 0px;
+  border: 5px solid skyblue;
+}
+body #ontraio p {
+  width: 430px;
+  margin-top: 10px;
+  text-align: center;
+  margin-left: 17px;
+  font-size: 14px;
+  color: #454545;
 }
 
 @media screen and (min-width: 750px) {
