--- a/main.scss
+++ b/main.scss
@@ -13,6 +13,7 @@ body{
         list-style-type: none;
     }
     #homeImg{
+        display: flex;
        
         width: 500px;
         background-color: rgb(14, 116, 194);
@@ -24,6 +25,7 @@ body{
     #homeP{
         h2{
             color: rgb(240, 251, 254);
+            font-size: 36px;
         }
         p{
             font-size: 20px;
@@ -52,17 +54,19 @@ body{
         display: inline-block;
         border-bottom:3px solid skyblue ;
         img{
-            width: 100px;
+            width: 60px;
             display: inline-block;
             margin: 0 auto;
-            margin-left: 0px;
+            margin-top: 20px;
+            margin-left: 75px;
 
         }
         p{
             font-size: 20px;
-            color: burlywood;
+            color: rgb(224, 172, 103);
             display: inline-block;
             margin-left: 30px;
+            margin-top: 0px;
         }
     }
 
@@ -130,6 +134,35 @@ body{
 
         }
 
+    }
+    #ontraio{
+        display: inline;
+        h2{
+            text-align: center;
+            font-size: 25px;
+            margin: 0 auto;
+            color: rgb(50, 50, 50);
+        }
+        h3{
+            color: rgb(27, 132, 189);
+            margin-top: 36px;
+            font-size: 22px;
+            text-align: center;
+        }
+        img{
+            width: 460px;
+            height: auto;
+            margin-top: 0px;
+            border: 5px solid skyblue;
+        }
+        p{
+            width: 430px;
+            margin-top: 10px;
+            text-align: center;
+            margin-left: 17px;
+            font-size: 14px;
+            color: rgb(69, 69, 69);
+        }
     }
 
 }
